<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">失踪人口信息共享平台</string>
    <string name="about_text">失踪人口信息共享平台 \n version: 1.0.0</string>
    <string name="navigation_point">导航点</string>
   <string name="refresh">刷新</string>
    
    <string name="inputAccHint">输入帐号</string>
	<string name="accInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    
      <string name="main_btn_open">打开</string>
    <string name="main_btn_setting">设定</string>
    <string name="main_btn_exit">退出</string>
    
  
	<string name="idropw_null">帐号或密码不能为空</string>
	<string name="idropw_error">帐号或密码错误，请注意大小写。</string>
	<string name="phrocn_null">手机号或验证码不能为空</string>
	<string name="register">注册</string>
	<string name="register_success">注册完成，请注意查收手机短信。</string>
	<string name="register_error">手机号已注册过</string>
	<string name="register_account">注册帐号</string>
	<string name="net_setting">网络设置</string>
	<string name="help">帮助</string>
	<string name="help_text">帮助</string>
	<string name="about">关于</string>
	<string name="exitapp">退出程序</string>
	<string name="comfirm_exit_title">确认退出</string>
	<string name="confirm_exit">确定退出程序？</string>
	<string name="str_ok">确定</string>
	<string name="str_back">返回</string>
	<string name="str_yes">是</string>
	<string name="str_no">否</string>
	<string name="alter_password">修改密码</string>
	<string name="eminimize">最小化</string>
	
    <string name="opt_remember">保存密码</string>
	<string name="nolink_login">离线登录</string>
    <string name="auto_login">自动登录</string>
	
    
</resources>
